[package]
name = "hilshsa-nasa"
version = "0.1.0"
description = "Urban Planning Analysis - Tauri Backend"
authors = ["Miskatul Anwar"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
urlencoding = "2" 
zbus = { version = "3", default-features = false, features = ["tokio"] }



